# telegram-find-prices

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  tests.yml
production/: .env.example  docker-compose.yml
src/: auth.py  bot.py  bot_commands.py  channel_listener.py  client_commands.py  config.py  database.py  dev.py  generate_string_session.py  models.py  price_parser.py  scheduler.py  translations.py
tests/: conftest.py  test_bot.py  test_matching.py  test_models.py  test_price_parser.py  test_translations.py
